--- a/windowsservercore-ltsc2019/Dockerfile
+++ b/windowsservercore-ltsc2019/Dockerfile
@@ -1,5 +1,5 @@
 # escape=`
-FROM mcr.microsoft.com/windows/servercore:ltsc2019
+FROM msint.azurecr.io/windows/servercore:ltsc2019
 
 RUN powershell -Command `
     Add-WindowsFeature Web-Server; `
